--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                 <legend>Catalog</legend>
                 <label>
                   <span>Item</span>
-                  <select id="items"></select>
+                  <select id="items" name="item"></select>
                 </label>
                 <label>
                   <span>Quantity</span>
-                  <input id="quantity" type="number" />
+                  <input id="quantity" type="number" name="num" />
                 </label>
                 <input type="submit" value="Add To Cart" />
               </fieldset>
